--- a/Life_Expectancy.ipynb
+++ b/Life_Expectancy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PROJECT 3 CLEANED VERSION"
+    "# Life Expectancy Predictions by Country"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#we drop the following countries due to missing values\n",
+    "#we drop the following countries because most of their data is missing.\n",
     "country_drops = [\"Czechia\", \"Côte d'Ivoire\" ,\"Democratic People's\" ,\"Republic of Korea\",\n",
     "                 \"Democratic Republic of the Congo\",\"Marshall Islands\",\"Monaco\", \"Niue\",\n",
     "                 \"Republic of Korea\",\"Republic of Moldova\",\"Somalia\",\"Tuvala\",'Nauru',\n",
@@ -643,6 +643,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
